@@ -129,6 +129,7 @@ Display miscellaneous details.
 See
 .BR umask (P) "" ", "
 .BR getcwd (3) "" ", "
+.BR personality (2) "" " (Linux), "
 .BR proc (5) "" ", "
 .BR prctl (2) "" ", "
 .BR aa_getcon (2) "" " (Linux), "
